src/objects/Instalment__c.object
<CustomObject>
    <fields>
        <fullName>InstalmentAmountDue__c</fullName>
        <description>Calculated by the budget plan
This may change based on the how the DD is handled</description>
        <label>Instalment Amount Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InstalmentDueDate__c</fullName>
        <label>Instalment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InstalmentNumber__c</fullName>
        <label>Instalment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentPlan__c</fullName>
        <label>Payment Plan</label>
        <referenceTo>PaymentPlan__c</referenceTo>
        <relationshipName>Installments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Instalment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IN-{000000000}</displayFormat>
        <label>Instalment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instalments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>